Fixed white space right side mobile

--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ html {
 }
 body {
   overflow-x: hidden;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
   font-family: 'Berlin', Arial, Helvetica, sans-serif;
   box-sizing: border-box;
   letter-spacing: 0.08em;
@@ -188,9 +192,6 @@ footer {
   .signup-form {
     max-width: 22em;
     padding: 1.5rem;
-  }
-  .signup-form-padding {
-    padding: 1em;
   }
   .arrow-btn {
     display: none;
